Changelog
=========

HEAD
~~~~

1.0b8 (released 16/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Only pretend to delete variables; this improves performance and
  guarantees that we don't attempt to delete a variables which is used
  in a nested scope (closure). It works, because the code generation
  transform silently drops the delete-statements, but removes them
  from its internal scope dictionary. [malthe]

- Remove variables from scope dictionary upon block exit. [malthe]

- Split out compile-function such that we can always write the source
  code to disk in debug-mode. [malthe]

- Correctly transfer scope to callback-function that will fill macro
  slot contents. Previously, we would precompute fill-slots, but this
  was wrong since it's expected to inherit the scope of the macro
  currently in use. [malthe]

- Made error handler compatible with Python 2.4 [malthe]

- Maintain symbol mappings for joined expressions. [malthe]

1.0b7 (released 15/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Fixed interpolation edge where a right curly brace not part of an
  interpolation expression would cancel a succeeding
  interpolation. [malthe]

- Pass `target_language` when using macros. [malthe]

1.0b6 (released 13/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- When validating inserted content (in debug-mode), make sure we wrap
  content as a proper HTML document, including HTML entity
  definitions. [malthe]

- If an element does not belong to a known namespace, assume it's the
  default namespace. This change is relevant after the introduction of
  fallback elements. [malthe]

- XML declarations should be printed with or without a doctype
  element, and only if the template includes it. [malthe]

1.0b5 (released 12/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Encode code annotations if encoding is required. [malthe]

- Added filename to XML syntax error exception message. [malthe]

- Fixed bug where a template would be wrapped with namespace